<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/newUi">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        style="@style/toolbar_style"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <TextView
            android:id="@+id/register_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/create_an_account_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
       style="@style/registration_form_text_view" />

    <TextView
        android:id="@+id/enter_details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_your_credentials"
        style="@style/enter_details" />



    <LinearLayout
        android:id="@+id/form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/form_layout_padding">



        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            style="@style/phone_number_edit_text"
            android:hint="@string/full_name"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/email_icon"
            android:hint="@string/email_edit_text"
            style="@style/phone_number_edit_text" />

        <EditText
            android:id="@+id/phone_numberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/phone_number_icon"
            style="@style/phone_number_edit_text"
            android:hint="@string/phone_number" />

        <Spinner
            android:id="@+id/options_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            style="@style/optionsSpinner" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/submit_button"
            android:background="@drawable/button_background"
            android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>